--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  height: 100vh;
+  padding-top: 10px;
+  background-color: #bbd2f3;
+  font-family: Lato,sans-serif;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.freecodecamp-logo-contenedor{
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.freecodecamp-logo{
+  height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.contenedor-calculadora{
+  width: 500px;
+  height: auto;
+  padding: 0%;
+  background: linear-gradient(135deg, #3a3a3a, #000000);
+  border-radius: 20px;
+  box-shadow: 0 25px 60px -10px rgba(0,0,0,0.5);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.fila{
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wtf{
+  background-color: aqua;
 }
